Bug 237885 - Linebreaks in usage informations of LaTeX commands are not used.
Summary: Linebreaks in usage informations of LaTeX commands are not used.
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.85
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-16 23:25 UTC by Christian Herzberg
Modified: 2010-05-17 09:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Herzberg 2010-05-16 23:25:47 UTC
Version:           2.0.85 (using 4.4.3 (KDE 4.4.3), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.33-4.slh.1-sidux-686

To see what I mean, please choose menu:
 "LaTeX" > "Tabular Environment" > "Tabular - \\begin{tabular}"

The usage informations in the tab "Log and Messages" (in the Bottom Bar) ignore the linebreaks and show it all in one line.

The code try to break the lines via "\n":
======= Begin =======
 \begin{tabular}[pos]{cols}\n
column 1 entry & column 2 entry ... & column n entry \\\\\n
...\n
\\end{tabular}\n
pos : Specifies the vertical position; default is alignment on the center of 
the environment.\n
     t - align on top row\n
     b - align on bottom row\n
cols : Specifies the column formatting.\n
     l - A column of left-aligned items.\n
     r - A column of right-aligned items.\n
     c - A column of centered items.\n
     | - A vertical line the full height and depth of the environment.\n
     @{text} - this inserts text in every row.\n
The \\hline command draws a horizontal line the width of the table.\n
The \\cline{i-j} command draws horizontal lines across the columns 
specified, beginning in column i and ending in column j.\n
The \\vline command draws a vertical line extending the full height and 
depth of its row.
======= End =======

Thanks for Kile and all efforts
Comment 1 Michel Ludwig 2010-05-16 23:56:46 UTC
SVN commit 1127542 by mludwig:

Correctly split strings containing line breaks on several lines in the log widget.

BUG: 237885



 M  +11 -1     logwidget.cpp  
 M  +5 -1      logwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1127542
Comment 2 Christian Herzberg 2010-05-17 00:29:35 UTC
@Michel
This was fast. Fixed in 31 minutes and 1 second.
Thanks a lot for your efforts and all the time you spend on Kile.

Kindest regards,
Chrisch
Comment 3 Michel Ludwig 2010-05-17 09:34:29 UTC
(In reply to comment #2)
> This was fast. Fixed in 31 minutes and 1 second.
> Thanks a lot for your efforts and all the time you spend on Kile.

Thanks. However, it doesn't look as good as in the previous versions of Kile. I think we'll have to introduce a special panel which shows LaTeX usage information.