Correctly split strings containing line breaks on several lines in the log widget.

BUG: 237885